Fixed top menu and bug in main activity
Added top menu and fixed bug in main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">Reminder Buddy</string>
     <string name="menu_add">Add</string>
+    <string name="menu_settings">Settings</string>
     <string name="button_save">Save</string>
+    <string name="button_showdetails">...</string>
     <string name="title_activity_add_remainder">Add Reminder</string>
     <string name="title_activity_main">Main</string>
     <string name="title_activity_settings">Settings</string>
