--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_activity_about_us">About Us</string>
     <string name="link_feedback">Please leave your feedback <a href="mailto:kirangavv@hotmail.com?Subject=Reminder Buddy Feedback" target="_top">kirangavv@hotmail.com</a></string>
     <string name="link_companyname"><a href="http://www.macsof.com/">http://www.macsof.com/</a></string>
-    <string name="contributorsthankyou">Thanks for using our app! Please share this your friends \n\n Kiran and Satish.</string>
+    <string name="contributorsthankyou">Thanks for using our app! Please share this your friends.</string>
+    <string name="title_activity_dash_board">DashBoard</string>
 
 </resources>
