--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,11 @@
     <string name="button_purchase">Purchase</string>
     <string name="button_aboutus">About Us</string>
     <string name="title_activity_about_us">About Us</string>
-    <string name="link_feedback">Please leave your feedback <a href="mailto:kirangavv@hotmail.com?Subject=Reminder Buddy Feedback" target="_top">kirangavv@hotmail.com</a></string>
+    <string name="link_feedback">Please leave your feedback <a href="mailto:kirangavv@hotmail.com?Subject=Reminder Buddy Feedback" target="_top">feedback@hotmail.com</a></string>
     <string name="link_companyname"><a href="http://www.macsof.com/">http://www.macsof.com/</a></string>
     <string name="contributorsthankyou">Thanks for using our app! Please share this your friends.</string>
     <string name="title_activity_dash_board">DashBoard</string>
+    <string name="datetip">*enter date in mm-dd-yyyy format</string>
+    <string name="phonetip">*enter phone number in integers with out ISD code</string>
 
 </resources>
