--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="title_activity_dash_board">DashBoard</string>
     <string name="datetip">*enter date in mm-dd-yyyy format</string>
     <string name="phonetip">*enter phone number in integers with out ISD code</string>
+    <string name="backuptip">*no backup available</string>
+    <string name="versiontip">*trail version limited to 30 reminders, purchase for unlimited reminders</string>
 
 </resources>
